<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateRequest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

<!--        <TextView-->
<!--            android:id="@+id/textView20"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="25dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="#219658"-->
<!--            android:backgroundTint="#219658"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <TextView

            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20dp"
            android:text="Add New Request"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="35dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:text="Topic"-->
<!--            android:textColor="#000"-->
<!--            android:textSize="25dp"-->
<!--            android:textStyle="bold" />-->

        <!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="35dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:text="Description"-->
<!--            android:textColor="#000"-->
<!--            android:textSize="25dp"-->
<!--            android:textStyle="bold" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

        <EditText

            android:id="@+id/etTopic"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/green_layout"
            android:ems="10"
            android:hint="Enter Requesting Product"
            android:inputType="textPersonName" />

        <EditText

            android:id="@+id/etDes"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/green_layout"
            android:ems="10"
            android:hint="Enter Price Range"
            android:inputType="textPersonName" />

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginLeft="35dp"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            android:text="Price Range"-->
        <!--            android:textColor="#000"-->
        <!--            android:textSize="25dp"-->
        <!--            android:textStyle="bold" />-->

        <EditText

            android:id="@+id/etPriceRange"
            android:layout_width="370dp"
            android:layout_height="280dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:background="@drawable/green_layout"
            android:hint="Enter Requesting Product Description"
            android:inputType="text" />

            </LinearLayout>

        <Button
            android:id="@+id/btn_request"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_marginLeft="140sp"
            android:layout_marginTop="16sp"
            android:backgroundTint="@color/btnNewReqAdd"
            android:text="ADD"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>